[workspace]
resolver = "2"
members = [
    "game",
    "engine",
    "util/*",
]
default-members = [
    "game",
    "engine",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["float_roundtrip"] }
tracing = "0.1.40"
numfmt = "1.1.1"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
enum-map = { version = "2.7.3", features = ["serde"] }
fastrand = { version = "2.1.0" }

[profile.release]
debug = 0
opt-level = 'z'
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
