[package]
name = "hes-editor"
version = "1.0.0"
edition = "2024"

[dependencies]
hes-engine = { path = "../engine" }
hes-images = { path = "../images" }
egui = { workspace = true }
egui-notify = "0.21.0"
strum.workspace = true
egui-file-dialog = "0.12.0"
serde_json.workspace = true
fs-err = "3.1.3"
egui_commonmark = { version = "0.22", features = ["macros"] }
egui_extras = { workspace = true }
egui_taffy = { workspace = true }
