[package]
name = "hes-engine"
version = "1.0.3"
authors = ["Francis Tseng"]
edition = "2024"

[lib]
doctest = false

[dependencies]
paste = "1.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
fastrand = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11.15"
enum-map = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.10.0", features = ["v4", "serde", "js"] }
fastrand = { workspace = true, features = ["js"] }

[dev-dependencies]
float-cmp = "0.9"
criterion = "0.3"
# for reading pngs in tests/benchmarks
image = { version = "0.25.6", default-features = false, features = ["png"] }
