[package]
name = "hes-game"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { workspace = true }
egui_taffy = { workspace = true }
egui_extras = { version = "0.32.0", default-features = false, features = ["webp", "svg", "image"] }
serde = { workspace = true, features = ["derive"] }
hes-engine = { path = "../engine" }
hes-images = { path = "../images" }
extend = "1.2.0"
enum-map = { workspace = true }
enum-iterator = "2.1.0"
strum = { workspace = true }
tracing = { workspace = true }
paste = "1.0.15"
rust-i18n = "3.1.5"
nom = "8.0.0"
egui_animation = "0.9.0"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "webp"] }
fastrand = { workspace = true }
numfmt = { workspace = true }
treemap = "0.3.2"
bincode = { version = "1" }
three-d = { git = "https://github.com/asny/three-d.git", rev = "12f3400307dd778c45e0160da924ddd964d8831a", default-features = false }
egui-file-dialog = "0.11.0"
serde_json.workspace = true
sys-locale = "0.3.2"
phf = "0.13.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6"
eframe = { version = "0.32.0", default-features = false, features = ["glow", "persistence"] }
kira = { version = "0.10.8", default-features = false, features = ["ogg"] }
log = "0.4"
wasm-bindgen-futures = "0.4"
sys-locale = { version = "0.3.2", features = ["js"] }
web-sys = { version = "0.3", default-features = false }
egui_extras = { version = "0.32.0", default-features = false, features = ["webp", "svg", "image", "http"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hes-editor = { path = "../editor" }
hector = { git = "https://github.com/frnsys/hector-rs.git", rev = "93b424a62d6e63cacabb41c45677b4d6f3d153be" }
eframe = { version = "0.32.0", default-features = false, features = ["glow", "persistence", "wayland", "x11"] }
kira = { version = "0.10.8", default-features = false, features = ["cpal", "ogg"] }

[build-dependencies]
glob = "0.3.1"
fs-err = "3.1.1"
serde_json = { workspace = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
phf = "0.13.1"
phf_codegen = "0.13.1"
