[package]
name = "hes-editor"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "FileList"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
hes-engine = { path = "../hes-engine" }
paste = "1.0.15"
numfmt = "1.1.1"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
base64 = "0.22.1"
num = "0.4.3"
leptos-use = "0.10.10"
leptos_toaster = { version = "0.1.7", features = ["csr", "builtin_toast"] }
