[package]
name = "hes-editor"
version = "1.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
leptos = { workspace = true }
leptos-use = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["File", "FileList"] }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
strum = { workspace = true }
hes-engine = { path = "../hes-engine" }
base64 = "0.22.1"
num = "0.4.3"
leptos_toaster = { version = "0.1.7", features = ["csr", "builtin_toast"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["tauri", "dialog"] }
