[package]
name = "hes-editor"
version = "1.0.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
leptos = { workspace = true }
leptos-use = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["File", "FileList", "BlobPropertyBag"] }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
tracing = { workspace = true }
tracing-wasm = { workspace = true }
strum = { workspace = true }
hes-engine = { path = "../hes-engine" }
base64 = "0.22.1"
num = "0.4.3"
brotli = "6.0.0"
rmp-serde = "1.3.0"
leptos_toaster = { version = "0.1.7", features = ["csr", "builtin_toast"] }
anyhow = "1.0.86"

[build-dependencies]
markdown = "0.3.0"
