[package]
name = "hes-engine"
version = "1.0.3"
authors = ["Francis Tseng"]
edition = "2021"

[lib]
doctest = false

[dependencies]
paste = "1.0"
uuid = { version = "1.10.0", features = ["v4", "serde", "js"] }
fastrand = { workspace = true, features = ["js"] }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11.15"
enum-map = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
float-cmp = "0.9"
criterion = "0.3"
image = "0.23.14" # for reading pngs in tests/benchmarks
