[package]
name = "hes-game"
version = "1.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
hes-engine = { path = "../hes-engine" }
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos-use = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
numfmt = { workspace = true }
strum = { workspace = true }
enum-map = { workspace = true }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
anyhow = "1.0.86"
list_files_macro = "0.1.0"
leptos_animation = "0.5.2"
enum-iterator = "2.1.0"
gloo-net = { version = "0.5.0", features = ["json"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
extend = "1.2.0"
bincode = "1.3.3"
regex-lite = "0.1.6"
paste = "1.0.15"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
http = { version = "1.0" }
base64 = "0.22.1"
codee = { version = "0.1.2", features = ["json_serde"] }

[dependencies.web-sys]
workspace = true
features = ["Performance", "Animation", "KeyframeEffect", "KeyframeEffectOptions", "HtmlImageElement", "Storage"]
