[package]
name = "hes-new"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", features = ["glow", "persistence"] }
egui = { version = "0.32.3", features = ["persistence"], default-features = false }
kira = { version = "0.10.8", default-features = false, features = ["mp3"] }
egui_extras = { version = "0.32.0", features = ["all_loaders", "image"] }
serde = { version = "1.0.219", features = ["derive"] }
hes-engine = { path = "../hes-engine" }
extend = "1.2.0"
enum-map = { workspace = true }
enum-iterator = "2.1.0"
strum = { workspace = true }
tracing.workspace = true
paste = "1.0.15"
rust-i18n = "3.1.5"
nom = "8.0.0"
egui_animation = "0.9.0"
sys-locale = "0.3.2"
webbrowser = "1.0.5"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
egui_taffy = "0.9"
fastrand.workspace = true
numfmt.workspace = true
treemap = "0.3.2"
ordered-float = "5.1.0"
bincode = { version = "1" }
rust-embed = "8.7.2"
blake3 = "1.8.2"
regex-lite = "0.1.7"
# hector = { path = "../hector-rs" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
sys-locale = { version = "0.3.2", features = ["js"] }
log = "0.4"
