[package]
name = "hes-images"
version = "1.0.0"
edition = "2024"

[dependencies]
egui = { workspace = true }
hes-engine = { path = "../engine" }
tracing = { workspace = true }
blake3 = "1.8.2"
fastrand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rust-embed = { version = "8.7.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", default-features = false, features = ["Window", "Location"] }

[build-dependencies]
glob = "0.3.1"
fs-err = "3.1.1"
