[package]
name = "i18n"
version = "1.0.0"
description = "Tool for managing translations"
authors = ["Francis Tseng"]
edition = "2021"

[dependencies]
nom = "7.1.3"
strum = { workspace = true }
hes-engine = { path = "../../hes-engine" }
hes-game = { path = "../../hes-game" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
csv = "1.3.0"
glob = "0.3.1"
