[package]
name = "surface"
version = "1.0.0"
description = "Generate Earth textures and compute cached temperature/precipitation changes."
authors = ["Francis Tseng"]
edition = "2021"

[dependencies]
hes-engine = { path = "../../hes-engine" }
lodepng = { version = "3.10.2" }
rgb = { version = "0.8.42", features = ["as-bytes"] }
serde_json = { workspace = true }

[dev-dependencies]
float-cmp = "0.9"
